--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -31,7 +31,7 @@
         {% if applePayVisible %}
             {% block page_product_detail_buy_container_apple_direct_component %}
                 <div class="row g-2 form-row mt-2 justify-content-end js-apple-pay-container mollie-apple-pay-direct-pdp d-none">
-                    {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' with {cols: 'col-8'} %}
+                    {% include '@MolliePayments/mollie/component/apple-pay-direct-button.html.twig' with {cols: 'col-8'} %}
                 </div>
             {% endblock %}
         {% endif %}
@@ -41,7 +41,7 @@
         {% if paypalExpressVisible %}
             {% block page_product_detail_buy_container_mollie_paypal_express_component %}
                 <div class="row g-2 form-row mt-2 justify-content-end mollie-paypal-express-pdp">
-                    {% include '@MolliePayments/mollie/component/paypal-express-button.twig' with {cols: 'col-8'} %}
+                    {% include '@MolliePayments/mollie/component/paypal-express-button.html.twig' with {cols: 'col-8'} %}
                 </div>
             {% endblock %}
         {% endif %}
