--- a/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
+++ b/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
@@ -15,7 +15,7 @@
         {% if applePayVisible %}
             {% block component_offcanvas_cart_actions_checkout_apple_direct_component %}
                 <div class="mt-2 js-apple-pay-container mollie-apple-pay-direct-offcanvas d-none">
-                    {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
+                    {% include '@MolliePayments/mollie/component/apple-pay-direct-button.html.twig' %}
                 </div>
             {% endblock %}
         {% endif %}
@@ -23,7 +23,7 @@
         {% if paypalExpressVisible %}
             {% block component_offcanvas_cart_actions_checkout_mollie_paypal_express_component %}
                 <div class="mt-2 justify-content-end mollie-paypal-express-offcanvas">
-                    {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
+                    {% include '@MolliePayments/mollie/component/paypal-express-button.html.twig' %}
                 </div>
             {% endblock %}
         {% endif %}
