--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
@@ -53,6 +53,18 @@
         padding: 6px;
     }
 
+    .danger {
+        background: #de294c;
+        color: #fff;
+        line-height: 36px;
+    }
+
+    .warning {
+        background: gold;
+        color: #52667a;
+        line-height: 36px;
+    }
+
     .mollie-refund-manager-order-container {
         .order-container-top {
             .order-container-top-left {
