PISHPS-503: Show validation errors for guest accounts

--- a/src/Resources/app/storefront/src/scss/component/express-button.scss
+++ b/src/Resources/app/storefront/src/scss/component/express-button.scss
@@ -1,4 +1,4 @@
-.mollie-express-button.processed {
+.mollie-express-button.loading {
     .loader {
         display: block;
         position: absolute;
