NTR: fix broken doc link

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="col-right">
-        <sw-button class="btn-action" href="https://github.com/mollie/Shopware6/wiki">
+        <sw-button class="btn-action cy-documentation" link="https://github.com/mollie/Shopware6/wiki">
             <sw-icon name="regular-file"></sw-icon>
             {{ $tc('mollie-payments.config.info.btnDocumentation') }}
         </sw-button>
