--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.scss
@@ -3,10 +3,18 @@
         a {
             color: white;
             text-decoration: none;
+
         }
     }
 
     .mollie-subscriptions-detail-status-action-row {
         margin-bottom: 20px;
     }
+
+    .cy-btn-pause,.cy-btn-skip,.danger {
+        background: #de294c;
+        color: #fff;
+        line-height: 36px;
+    }
+
 }
