NTR: defer async mollie js

--- a/src/Resources/views/storefront/page/checkout/confirm/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/confirm/index.html.twig
@@ -12,7 +12,7 @@
 
 
     {% if page.enable_credit_card_components == true %}
-        <script src="https://js.mollie.com/v1/mollie.js"></script>
+        <script src="https://js.mollie.com/v1/mollie.js" defer async></script>
     {% endif %}
     {{ parent() }}
 {% endblock %}
