--- a/src/Resources/views/storefront/page/checkout/confirm/confirm-payment.html.twig
+++ b/src/Resources/views/storefront/page/checkout/confirm/confirm-payment.html.twig
@@ -3,7 +3,7 @@
 {% block page_checkout_confirm_payment_current_text %}
     {{ parent() }}
 
-    {% if "MolliePayments" in context.paymentMethod.handlerIdentifier and page.extensions.MollieTestModePageExtension.testMode == true %}
+    {% if "Mollie" in context.paymentMethod.handlerIdentifier and page.extensions.MollieTestModePageExtension.testMode == true %}
          ({{ "molliePayments.testMode.label"|trans }})
     {% endif %}
 {% endblock %}
