--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-order-lifetime-warning/mollie-pluginconfig-section-order-lifetime-warning.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-order-lifetime-warning/mollie-pluginconfig-section-order-lifetime-warning.scss
@@ -1,18 +1,17 @@
 .bankTransferDueDateKlarnaLimitReached {
-  border-color: rgb(251, 175, 24);
-  background-color: rgb(251, 175, 24,0.2);
+    border-color: rgb(251 175 24);
+    background-color: rgb(251 175 24 / 20%);
 
-  > [class*="-icon"] {
-    color: rgb(251, 175, 24)
-  }
+    > [class*='-icon'] {
+        color: rgb(251 175 24);
+    }
 }
 
 .bankTransferDueDateLimitReached {
-  border-color: rgb(226, 38, 42);
-  background-color: rgb(226, 38, 42,0.2);
+    border-color: rgb(226 38 42);
+    background-color: rgb(226 38 42 / 20%);
 
-
-  > [class*="-icon"] {
-    color: rgb(226, 38, 42)
-  }
+    > [class*='-icon'] {
+        color: rgb(226 38 42);
+    }
 }
