added mandate route and refactored routes

--- a/src/Resources/views/mollie/component/credit-card-mandate.html.twig
+++ b/src/Resources/views/mollie/component/credit-card-mandate.html.twig
@@ -9,7 +9,7 @@
                             {% if not modifiable %}
                                 <input type="radio"
                                        form="confirmOrderForm"
-                                       name="mollieCreditCardMandate"
+                                       name="mandateId"
                                        class="{{ formCheckInputClass ?? 'custom-control-input form-check-input' }}"
                                        id="mandate{{ mandate.id }}"
                                        value="{{ mandate.id }}"
