--- a/src/Resources/views/storefront/component/payment/component/cc-fields.html.twig
+++ b/src/Resources/views/storefront/component/payment/component/cc-fields.html.twig
@@ -35,7 +35,7 @@
                 <div class="mollie-credit-card-mandate-radio {{ formRadioWrapperClass ?? 'custom-control custom-radio form-check' }}">
                     {% block mollie_credit_card_mandate_form_radio_input %}
                         <input type="radio"
-                               name="mollieCreditCardMandate"
+                               name="mandateId"
                                form="confirmOrderForm"
                                class="{{ formCheckInputClass ?? 'custom-control-input form-check-input' }}"
                                id="mollieCreditCardMandateForm"
